# WebUI_Autotest_Agent

./: .gitignore  README.md
AutoTest_Backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run_backend_tests.py  run_rag_comparison.py
AutoTest_Backend/app/: main.py
AutoTest_Backend/app/api/: router.py
AutoTest_Backend/app/core/: config.py  container.py  database.py  exceptions.py  logger.py
AutoTest_Backend/app/knowledge_base/: selenium_tips.txt
AutoTest_Backend/app/models/: __init__.py  entities.py
AutoTest_Backend/app/repositories/: __init__.py  execution_repository.py  settings_repository.py  test_case_repository.py
AutoTest_Backend/app/schemas/: __init__.py  execution.py  generate.py  health.py  knowledge.py  settings.py
AutoTest_Backend/app/services/: __init__.py  agent_memory_service.py  execution_service.py  executor_service.py  failure_diagnostic_service.py  generation_service.py  llm_service.py  rag_service.py  strategy_service.py
AutoTest_Backend/app/utils/: code_parser.py
AutoTest_Backend/data/rag/: chroma.sqlite3
AutoTest_Backend/docs/: EXPERIMENT_RESULTS.md  EXPERIMENT_SCENARIOS.md
AutoTest_Backend/temp_scripts/: generated_test.py  run_test.bat
AutoTest_Backend/tests/: __init__.py  runtime_support.py  test_api_integration.py  test_code_parser.py  test_database_migrations.py  test_execution_service.py  test_failure_diagnostic_service.py  test_generation_service.py  test_health_endpoint.py  test_rag_service.py  test_self_heal_flow.py  test_settings_endpoint.py  test_strategy_service.py
AutoTest_Frontend/: README.md  (+5 more)
(+62 files in other folders)
